--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/landing.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
 </head>
 <body>
 
 	<!-- nav bar -->
-	<nav class="navbar navbar-dark bg-info">
+	<nav class="navbar navbar-inverse">
 		<div class"container">
-			<a class="navbar-brand"> HOPKINS CHAN</a>
+			<a class="navbar-brand">HOPKINS CHAN</a>
 				<ul class="nav navbar-nav pull-right">
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="profile.html">Home</a>
+						<a class="nav-link" href="profile.html">Profile</a>
 					</li>
 
 					<li class="nav-item active">
-						<a class="nav-link" href="profile.html">Profile</a>
+						<a class="nav-link" href="https://linkedin.com/in/hopkinschan">LinkedIn</a>
 					</li>
 
 				</ul>
@@ -34,12 +36,12 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<h1 class="display-3"> HOPKINS CHAN
+					<h1 class="animated fadeIn display-3"> HOPKINS CHAN
 					</h1>
-					<h2 class-"display-1">Marketer of the Market
+					<h2 class="animated fadeIn display-1">Marketer of the Market
 					</h2>
-					<p class="lead">
-						<a class="btn btn-primary btn-lg" href="profile.html">ABOUT ME</a>
+					<p class="animated fadeIn lead">
+						<a class="btn btn-default btn-lg" href="profile.html">ABOUT ME</a>
 					</p>
 				</div>
 			</div>
