--- a/profile.html
+++ b/profile.html
@@ -6,12 +6,13 @@
     <!-- <link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/profile.css">
+	<link rel="stylesheet" href="animate.min.css">
 
 
 </head>
 <body>
 
-	<nav class="navbar bg-info">
+	<nav class="navbar navbar-inverse">
 		<div class="container">
 			<a href="#" class="navbar-brand">
 				HOPKINS CHAN
@@ -67,13 +68,9 @@
 							INFORMATION
 						</h3>
 						<p class="card-text">
-							<ul>
-								<li>E: hopkinschan@gmail.com</li>
-								<li>T: +852 9642 9278 (HK)</li>
-								<li>T: +44 (0) 7397 327844</li>
-							</ul>
-							
-
+							<p>E: hopkinschan@gmail.com</p>
+							<p>T: +852 9642 9278 (HK)</p>
+							<p>T: +44 7397 327844 (UK)</p>
 						</p>
 					</div>
 				</div>
@@ -170,7 +167,7 @@
 							<ul>
 								<li>Intern, New Project Department</li>
 								<li>Jun 2013 - Aug 2014</li>
-								<li>SSupported in new project management, promotional events</li>
+								<li>Supported in new project management, promotional events</li>
 								<li>Organised a marketing event (named BIIC, refer to Projects section) as project promotion</li>
 								<li>Participated an employee training camp and assisted marketing department in Greater China</li>
 							</ul>
