--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 	<!-- end of nav bar -->
 
-	<div class="jumbotron text-center">
+	<div class="jumbotron pagination-centered text-center">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
